# SpireMan

./: .gitignore  CMakeLists.txt  README.md  save.txt
data/: cards.csv  encounters.csv  enemies.csv  events.csv
src/: main.cpp
src/config/: Constants.hpp  Paths.hpp
src/core/: AudioManager.cpp  AudioManager.hpp  Game.cpp  Game.hpp  GameContext.hpp  Logger.cpp  Logger.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.hpp  SceneTransition.hpp
src/database/: CardDatabase.cpp  CardDatabase.hpp  DataLoader.cpp  DataLoader.hpp  EncounterDatabase.cpp  EncounterDatabase.hpp  EnemyDatabase.cpp  EnemyDatabase.hpp  EventDatabase.cpp  EventDatabase.hpp  RelicDatabase.cpp  RelicDatabase.hpp
src/model/: CardDef.hpp  CardInstance.hpp  CombatDeck.hpp  EncounterDef.hpp  Enemy.hpp  EventDef.hpp  MapNode.hpp  Player.hpp  RunState.hpp  Types.hpp
src/scene/: CampfireScene.cpp  CampfireScene.hpp  CardRemoveScene.cpp  CardRemoveScene.hpp  CharacterSelectScene.cpp  CharacterSelectScene.hpp  CombatScene.cpp  CombatScene.hpp  EndScene.cpp  EndScene.hpp  EventScene.cpp  EventScene.hpp  MapScene.cpp  MapScene.hpp  MenuScene.cpp  MenuScene.hpp  RewardScene.cpp  RewardScene.hpp  ShopScene.cpp  ShopScene.hpp
src/system/: CardSystem.cpp  CardSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  EnemyAISystem.cpp  EnemyAISystem.hpp  EventSystem.cpp  EventSystem.hpp  MapSystem.cpp  MapSystem.hpp  SaveSystem.cpp  SaveSystem.hpp
src/ui/: Button.cpp  Button.hpp  CardPileOverlay.cpp  CardPileOverlay.hpp  CardView.cpp  CardView.hpp  DeckView.cpp  DeckView.hpp  EnemyGroupView.cpp  EnemyGroupView.hpp  EnemyView.cpp  EnemyView.hpp  EnergyView.cpp  EnergyView.hpp  FailureToast.cpp  FailureToast.hpp  HealthBar.cpp  HealthBar.hpp  IntentView.cpp  IntentView.hpp  RewardCardView.cpp  RewardCardView.hpp  ShopView.cpp  ShopView.hpp  StateView.cpp  StateView.hpp  TextUtils.cpp  TextUtils.hpp  TopInfoBar.cpp  TopInfoBar.hpp
